<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoryInput3">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText204"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/color"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button204"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button204"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomColor"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText204"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText205"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/superlative"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button205"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText204" />

            <Button
                android:id="@+id/button205"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomSuperlative"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText205"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText206"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/adjective"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button206"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText205" />

            <Button
                android:id="@+id/button206"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomAdjective"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText206"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText207"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/plural_body_part"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button207"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText206" />

            <Button
                android:id="@+id/button207"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomPluralBodyPart"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText207"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText208"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/body_part"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button208"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText207" />

            <Button
                android:id="@+id/button208"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomBodyPart"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText208"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText209"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/noun"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button209"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText208" />

            <Button
                android:id="@+id/button209"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomNoun"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText209"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText210"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/plural_animal"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button210"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText209" />

            <Button
                android:id="@+id/button210"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomPluralAnimal"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText210"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText211"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/adjective"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button211"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText210" />

            <Button
                android:id="@+id/button211"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomAdjective"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText211"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText212"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/adjective"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button212"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText211" />

            <Button
                android:id="@+id/button212"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomAdjective"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText212"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/editText213"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/adjective"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/button213"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText212" />

            <Button
                android:id="@+id/button213"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:onClick="randomAdjective"
                android:text="@string/button_random"
                android:textSize="8sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText213"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_submit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="24dp"
                android:onClick="submit"
                android:text="@string/button_submit"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText213" />

            <TextView
                android:id="@+id/error_message3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/message_error"
                android:textColor="#EE0606"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/button_submit3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>